# study-vlm

./: .gitignore  MLA.ipynb  README.md  Vector_search_DINOv3.ipynb  deepseekVL2.ipynb  download_sample_images.py  extract_kaggle_sample.py  fix_vector_search_notebook.py  full_image_search.py  llava_study.ipynb  ocr_practice.ipynb  pyproject.toml  run_torchinfo.py  simplify_dinov3_notebook.py  update_dinov3_notebook.py  visualize_attention.py  visualize_clip_attention.py
dino/: download_dinov3_7b.py
sam3/: dataset_utils.py  gausian_noise.py  only_sam3_encoder.ipynb  readme.md  run_sam_visualization.py  run_vector_indexing_with_vis.py  sam.ipynb  sam3+dino.py  sam3_dino_with_noise.py  sam3_utils.py  test_sam3_load.py  vector_search_sam3_bg_noise_dino.ipynb  vector_search_sam3_dino.ipynb
samples/: IMG_5359.HEIC
