[project]
name = "study-ocr"
version = "0.1.0"
description = "Hands-on OCR/VLM practice (LLaVA, BLIP-2 Q-Former, CLIP) with Jupyter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "jupyterlab",
    "ipykernel",
    "matplotlib",
    "Pillow",
    "sentencepiece",
    "torch",
    "torchvision",
    "transformers",
    "ipywidgets",
    "pillow-heif",
    "torchinfo",
    "torchviz",
    "graphviz",
    "sentence-transformers",
    "deepseek-vl2 @ file:///home/seunghyuk/workspace/study_ocr/deepseek_vl2_source",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = [
    "ocr_practice.ipynb",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = ["ruff"]
